examples/fail/bindprint.miniml
let myPrint = print;;
myPrint 42;;
